--- a/config/telegraf.conf
+++ b/config/telegraf.conf
@@ -64,7 +64,7 @@
 #   ## Multiple URLs can be specified for a single cluster, only ONE of the
 #   ## urls will be written to each interval.
 #   ##   ex: urls = ["https://us-west-2-1.aws.cloud2.influxdata.com"]
-  urls = ["http://localhost:8086"]
+  urls = ["http://${influx_server}:${influx_port}"]
 #
 #   ## Local address to bind when connecting to the server
 #   ## If empty or not set, the local address is automatically chosen.
